# danteac-eliased-faysalbm-melg-project

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  alphabet.json  canvasmain.js  giveup.json  index.html  main.css  main.js  midi.py  midi_data.json  misc.js  notes_array.json  nother_entertain.mid  nothersaved.js  oldparse.js  package-lock.json  package.json  parse.js  saved.js  savedfail.js  savedmain.js  savedunmodulerized.js  serde_weights  songs.js  testbed.js  testing.js  the_entertainer_pnn.mid  trash.py
aiproject/: Cargo.toml  index.js  init.js  package-lock.json  package.json  serde_weights  webpack.config.js
aiproject/src/: lib.rs  main.rs  matrix.rs  nn.rs  notes_rnn.rs  offset_rnn.rs  rnn.rs  serde_weights  song.rs  test.mid  tests.rs  vector.rs
aiproject/src/__MACOSX/train-data/: ._MIDI-Unprocessed_060_PIANO060_MID--AUDIO-split_07-07-17_Piano-e_2-04_wav--1.midi
canvas/: main.css
data/: README.md  notes_weights_biases  offsets_weights_biases
front-end/: combineTracks.js  halfwork.js  hmmm.css  index.html  main.css  main.js  main.md  midi_data.json  notes_array.json  package-lock.json  package.json  parse.js  savedcss.mm  savedworking.js  serde_weights  song.js  songs.js  unusedfunctions.js  web_parse.js  what.js  yetapproach.js
front-end/canvas/: index.html
front-end/integrated_rust/: Cargo.toml
front-end/integrated_rust/src/: lib.rs  oldlib.txt
front-end/midis/: Cool_Cool_Mountain_Theme_as_played_by_Tom_Brier.mid  Kimi_no_Shiranai_Monogatari_-_Bakemonogatari_ED.mscz.mid  Lone_Digger.mid  Mario_Party_Faster_Than_All__Performed_by_Tom_Brier_READ_DESC..mid  Nyan_Cat_-_As_played_by_Tom_Brier_a_the_Sutter_Creek_Ice-cream_Emporium.mid  Rush_E__Sheet_Music_Boss__Piano_Solo.mid  Sandstorm_-_Darude.mid  Super_Mario_Land_2_Ending_Theme_as_played_by_Tom_Brier.mid  hp.mid  (+2 more)
hello-world/: Cargo.toml  index.js  othercargo.txt
holy_linear_algebra/: Cargo.toml
holy_rnns/: Cargo.toml
holy_rnns/src/: lib.rs  notes_rnn.rs  offset_rnn.rs  rnn.rs
linear_algebra/: Cargo.toml
midiparser/: Cargo.toml
midis/: letsbegin.mid  mashup.mid
notes_training/: Cargo.toml
offset_training/: Cargo.toml
og_rnn_library_files/: notes_rnn.rs  offset_rnn.rs  rnn.rs
python-guide/: copiednotmine.py  individual.py  moresense.py  xor.py
rnns/: Cargo.toml  notes_weights_biases  old_serde_weights  serde_offset_weights  serde_weights  slightly_old_serde_weights
sentence-predicting-ai/many-to-one/: Cargo.toml
sentence-predicting-ai/many-to-one/src/: compare.txt  data.rs  main.rs  memory_reader.rs  memorymanager.rs  othersaved.txt  rnn.rs  rnnMemory.txt  rnnMemory2.txt  savedmemory.txt  savedserde  serde_weights
sentence-predicting-ai/many-to-one/src/linalg/: matrix.rs  mod.rs  tests.rs  vector.rs
tensorflow/: ai.py  example.midi  midi.py  play.py
understanding-tut/: README.md
(+25 files in other folders)
