[package]
name = "aiproject"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5"
wasm-bindgen = "0.2.63"
rand = "0.8.5"
num = "0.4"
midiparser = { path = "../midiparser" }
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] } 
serde_json = "1.0.81"

[lib]
crate-type = ["cdylib", "rlib"]
