[package]
name = "aiproject"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5"
wasm-bindgen = "0.2.63"
rand = "0.8.5"
num = "0.4"
midiparser = { path = "../midiparser" }
rand_distr = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
