[package]
name = "holy_rnns"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holy_linear_algebra = {path = "../holy_linear_algebra"}
midiparser = { path = "../midiparser" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"