[package]
name = "hello-world"
version = "0.1.0"
authors = ["Your Name <your@name.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
neon = "0.10.0"

[dependencies.midiparser]
path = "../../midiparser"

[dependencies.web-sys]
version =  "0.3.57"
features = [ "console" ]
