[package]
name = "many-to-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear_algebra = { path = "../linear_algebra" }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] } 
serde_json = "1.0.81"